hotfix: fix java 8 tests